# beermonopoly-api

./: .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
.travis/: deploy.sh
api/: add_release.ipynb  manage.py  run.sh
api/accounts/: urls.py  views.py
api/accounts/api/: urls.py  views.py
api/api/: asgi.py  hosts.py  settings.py  token.py  urls.py  views.py  wsgi.py
api/beers/: __init__.py  admin.py  apps.py  models.py  signals.py  tasks.py
api/beers/api/: filters.py  pagination.py  serializers.py  urls.py  utils.py  views.py
api/beers/migrations/: 0001_initial.py  0002_auto_20201208_1449.py  0003_auto_20201208_1540.py  0004_sitesettings.py  0005_auto_20201208_1856.py  0006_auto_20201208_1931.py  0007_auto_20201208_1943.py  0008_auto_20201208_2022.py  0009_beer_verified_match.py  0010_auto_20201208_2051.py  0011_auto_20201208_2053.py  0012_beer_created_at.py  0013_auto_20201209_0838.py  0014_store.py  0015_store_updated_at.py  0016_stock.py  0017_beer_product_selection.py  0018_auto_20201209_0922.py  0019_auto_20201209_1055.py  0020_auto_20201209_1224.py  0021_auto_20201209_1225.py  0022_auto_20201209_1234.py  0023_beer_prioritize_recheck.py  0024_stock_stock_updated.py  0025_auto_20201209_1513.py  0026_remove_store_store_updated.py  0027_store_store_updated.py  0028_auto_20201209_1529.py  0029_auto_20201209_1836.py  0030_beer_match_manually.py  0031_matchfilter.py  0032_beer_active.py  0033_auto_20201211_1130.py  0034_matchfiltercollab.py  (+58 more)
api/notifications/: admin.py  models.py
(+55 files in other folders)
